fix: oauth2 动态登录显示

--- a/conf/dev.ini
+++ b/conf/dev.ini
@@ -23,7 +23,8 @@ LogLevel = debug
 LogPath = ./logs/
 
 [Auth.Oauth2]
-Enabled = true
+Enabled = false
+Name = github
 RedirectURL = "http://127.0.0.1:8080"
 ClientId = ********
 ClientSecret = ***********
